--- a/css/hero.css
+++ b/css/hero.css
@@ -2,7 +2,7 @@
 .bgimage {
     width:100%;
     height:100vh;
-    background-imagke: url("https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-image: url("https://images.unsplash.com/photo-1518079773566-32c56d835cbe?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
