--- a/css/flayout.css
+++ b/css/flayout.css
@@ -6,7 +6,7 @@ html, body{
 .zhome-content{
     height: 100%;
     max-width: 960px;
-    background-color: #afcae5;
+    background-color: #e5bfd7;
 }
 .fContent{
     height: 100%;
